# libgphoto2

./: Makefile.am  configure.ac
gphoto-m4/: README.md
libgphoto2_port/: Makefile.am
libgphoto2_port/libgphoto2_port/: Makefile.am
libgphoto2_port/po/: Makevars  POTFILES.in  cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  fur.po  it.po  ja.po  ka.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po  zh_TW.po
libgphoto2_port/tests/: Makefile.am
po/: cs.po  da.po  de.po  es.po  eu.po  fr.po  hu.po  it.po  ja.po  ka.po  nl.po  pl.po  ro.po  ru.po  sv.po  uk.po  vi.po  zh_CN.po
